--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
+  "ovveride": {
+    "react": "$react",
+    "react-dom": "$react"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
